Fixes to uswds-error-border to align with Sketch

--- a/packages/web-components/src/mixins/uswds-error-border.scss
+++ b/packages/web-components/src/mixins/uswds-error-border.scss
@@ -2,13 +2,13 @@
 @import 'functions';
 
 :host([error][uswds]:not([error=''])) {
-    border-left: 0.4rem solid $v3-color-error-dark; /* USWDS red-60v, $theme-color-error-dark */
-    padding-left: v3_rem_to_px(1rem);
+    border-left: 4px solid $v3-color-error-dark; /* USWDS red-60v, $theme-color-error-dark */
+    padding-left: 16px;
     position: relative;
 }
 
 @media screen and (min-width: 1008px) {
     :host([error][uswds]:not([error=''])) {
-        margin-left: -1.4rem;
+        margin-left: v3_rem_to_px(-1.4rem);
     }
 }
